# security_permission_lite

./: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  ohos.build  permission.gni
frameworks/permission_standard/permissioncommunicationadapter/: BUILD.gn
frameworks/permission_standard/permissioncommunicationadapter/main/cpp/include/: ams_adapter.h  bms_adapter.h  i_distributed_permission.h  i_permission_manager.h  permission_def_parcel.h  pms_adapter.h
frameworks/permission_standard/permissioncommunicationadapter/main/cpp/src/: ams_adapter.cpp  app_id_info.cpp  bms_adapter.cpp  pms_adapter.cpp
interfaces/innerkits/permission_standard/distributedpermission/: BUILD.gn
interfaces/innerkits/permission_standard/distributedpermission/main/cpp/include/: app_id_info.h  distributed_permission_kit.h  idistributed_permission.h
interfaces/innerkits/permission_standard/distributedpermission/main/cpp/src/: app_id_info.cpp  distributed_permission_kit.cpp  distributed_permission_manager_client.cpp  distributed_permission_manager_client.h  distributed_permission_proxy.cpp  distributed_permission_proxy.h
interfaces/innerkits/permission_standard/distributedpermission/test/: BUILD.gn
interfaces/innerkits/permission_standard/distributedpermission/test/mock/: mock_distributed_permission_proxy.cpp
interfaces/innerkits/permission_standard/distributedpermission/test/mock/include/: constant_mock.h  mock_bundle_mgr.h
interfaces/innerkits/permission_standard/distributedpermission/test/mock/src/: constant_mock.cpp  event_handler_mock.cpp  external_deps_mock.cpp  get_uid_permission_command_mock.cpp  mock_bundle_mgr.cpp  mock_distributed_permission_proxy.cpp  mock_distributed_permission_proxy.h  mock_is_not_sensitive_resource.cpp  mock_parameter.c  mock_permission_kit.cpp  mock_permission_manager_proxy.cpp  mock_permission_mgr.cpp  soft_bus_center_mock.cpp
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/app_id_info_helper_test/: BUILD.gn  app_id_info_helper_test.cpp  app_id_info_helper_test.h
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/app_id_info_test/: BUILD.gn  app_id_info_test.cpp  app_id_info_test.h
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/check_caller_permission_test/: BUILD.gn  check_caller_permission_test.cpp  check_caller_permission_test.h
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/check_calling_or_self_permission_test/: BUILD.gn  check_calling_or_self_permission_test.cpp  check_calling_or_self_permission_test.h
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/check_calling_permission_test/: BUILD.gn  check_calling_permission_test.cpp  check_calling_permission_test.h
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/check_permission_inner_test/: BUILD.gn
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/check_self_permission_test/: BUILD.gn  check_self_permission_test.cpp  check_self_permission_test.h
interfaces/innerkits/permission_standard/distributedpermission/test/unittest/is_restricted_permission_test/: BUILD.gn  (+2 more)
interfaces/kits/permission_standard/distributedpermission/: BUILD.gn
services/: BUILD.gn
services/ipc_auth/: BUILD.gn
services/ipc_auth/include/: ipc_auth_lite.h  policy_preset.h
services/ipc_auth/src/: ipc_auth_impl.c  ipc_auth_lite.c
services/js_api/: BUILD.gn
services/js_api/src/: perm_module.cpp
services/permission_lite/unittest/pms/: BUILD.gn
services/permission_lite/unittest/pms/src/: ActsPMSCheckTest.cpp  ActsPMSTest.h  acts_pms_check_test.cpp  acts_pms_test.h
services/permission_standard/test/moduletest/module_test/: BUILD.gn
services/pms/: BUILD.gn
services/pms/include/hals/: hal_pms.h
services/pms/src/: pms_impl.c  pms_inner.c  pms_server.c  pms_server_internal.c
services/pms_client/: BUILD.gn  perm_client.c
test/resource/dpmssystemtestability/abilitySrc/checkSelfPermissionSystemTestA/: BUILD.gn  config.json
test/resource/dpmssystemtestability/abilitySrc/checkSelfPermissionSystemTestA/include/: check_self_permission_ability_a1.h
test/resource/dpmssystemtestability/abilitySrc/checkSelfPermissionSystemTestA/src/: check_self_permission_ability_a1.cpp
test/systemtest/common/distributedpermission/: BUILD.gn
test/systemtest/common/distributedpermission/check_distributed_permission_test/: BUILD.gn  bundle_grant.cpp  check_distributed_permission_test.cpp
test/systemtest/common/distributedpermission/distributed_permission_duid_transform_test/: BUILD.gn  bundle_grant.cpp  distributed_permission_duid_transform_test.cpp
test/systemtest/common/distributedpermission/distributed_permission_remind_test/: BUILD.gn  distributed_permission_remind_test.cpp
test/systemtest/common/distributedpermission/distributed_permission_used_records_test/: BUILD.gn  distributed_permission_used_records_test.cpp
test/systemtest/common/distributedpermission/distributed_request_permission_from_remote_test/: BUILD.gn  distributed_bundle_grant.cpp  distributed_request_permission_from_remote_test.cpp
test/systemtest/common/distributedpermission/fuzz_test/: BUILD.gn  distributed_permission_fuzz_test.cpp
test/systemtest/common/distributedpermission/notify_delete_permission_test/: BUILD.gn  notify_delete_permission_test.cpp
test/systemtest/common/distributedpermission/notify_sync_permission_test/: BUILD.gn  before_notify_sync_permission_test.cpp  notify_sync_permission_test.cpp  subject_notify_sync_permission_test.cpp
test/systemtest/common/distributedpermission/random_stress_test/: BUILD.gn  random_stress_test.cpp
test/systemtest/common/distributedpermission/stress_test/: BUILD.gn  stress_test.cpp
test/systemtest/common/distributedpermission/tool/: BUILD.gn
test/systemtest/common/distributedpermission/tool/include/: dpms_hap_management.h  system_test_distributed_permission_util.h
test/systemtest/common/distributedpermission/tool/src/: system_test_ability_util.cpp  system_test_distributed_permission_util.cpp
(+465 files in other folders)
