# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("../../build/config.gni")

if (os_level != "mini") {
  lite_library("ipc_auth_target") {
    target_type = "shared_library"
    sources = [
      "src/ipc_auth_impl.c",
      "src/ipc_auth_lite.c",
    ]
    include_dirs = [
      "../../interfaces/innerkits",
      "ipc_auth/include",
      "${ohos_product_adapter_dir}/security/permission_lite/ipc_auth/include",
      "../pms_base/include",
    ]

    deps = [
      "${hilog_lite_path}/frameworks/featured:hilog_shared",
      "${samgr_lite_path}/samgr:samgr",
      "../pms_base:pms_base",
      "//third_party/bounds_checking_function:libsec_shared",
    ]

    defines = []

    if (ohos_kernel_type == "liteos_a") {
      include_dirs += [
        "${aafwk_lite_path}/interfaces/kits/want_lite",
        "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
      ]

      deps += [
        "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
        "${appexecfwk_lite_path}/services/bundlemgr_lite:appexecfwk_services_lite",
      ]

      defines += [
        "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
        "OHOS_APPFWK_ENABLE",
      ]
    }
  }
} else {
  group("ipc_auth_target") {
  }
}
