# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../build/config.gni")

shared_library("ace_kit_permission") {
  sources = [ "src/perm_module.cpp" ]

  include_dirs = [
    "include",
    "../../interfaces/kits",
  ]
  deps = [
    "${hilog_lite_path}/frameworks/featured:hilog_shared",
    "../pms_client:pms_client",
  ]
}
