# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission_lite/build/config.gni")
import("//build/lite/config/component/lite_component.gni")
import("//build/ohos.gni")

if (os_level != "mini") {
  lite_library("pms_target") {
    target_type = "shared_library"
    sources = [
      "//base/security/permission_lite/services/pms/src/perm_operate.c",
      "//base/security/permission_lite/services/pms/src/pms_impl.c",
      "//base/security/permission_lite/services/pms/src/pms_inner.c",
      "//base/security/permission_lite/services/pms/src/pms_server.c",
      "//base/security/permission_lite/services/pms/src/pms_server_internal.c",
    ]

    include_dirs = [
      "//base/security/permission_lite/interfaces/kits",
      "//base/security/permission_lite/services/pms/include",
      "//base/security/permission_lite/services/pms/include/hals",
      "//base/security/permission_lite/services/pms_base/include",
      "//foundation/systemabilitymgr/samgr_lite/samgr/adapter/",
      "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/registry",
      "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/samgr",
      "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/communication/broadcast",
      "//foundation/systemabilitymgr/samgr_lite/samgr_endpoint/source",
      "//commonlibrary/utils_lite/include",
      "//third_party/cJSON",
      "//third_party/bounds_checking_function/include/",
    ]

    deps = [
      "${ohos_product_adapter_dir}/security/permission_lite:hal_pms",
      "//base/security/permission_lite/services/pms_base:pms_base",
      "//build/lite/config/component/cJSON:cjson_shared",
      "//foundation/communication/ipc/interfaces/innerkits/c/ipc:ipc_single",
      "//foundation/systemabilitymgr/samgr_lite/samgr:samgr",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
} else {
  ohos_static_library("pms_target_static") {
    sources = [
      "//base/security/permission_lite/services/pms/src/perm_operate.c",
      "//base/security/permission_lite/services/pms/src/pms_impl.c",
    ]

    include_dirs = [
      "//base/security/permission_lite/interfaces/kits",
      "//base/security/permission_lite/services/pms/include",
      "//base/security/permission_lite/services/pms/include/hals",
      "//third_party/cJSON",
      "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
    ]

    deps = [
      "${pms_hal_path}:hal_pms_static",
      "//build/lite/config/component/cJSON:cjson_static",
    ]
  }
}
