# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

if (os_level != "mini") {
  lite_library("pms_client") {
    target_type = "shared_library"
    sources =
        [ "//base/security/permission_lite/services/pms_client/perm_client.c" ]

    include_dirs = [
      "//base/security/permission_lite/interfaces/innerkits",
      "//base/security/permission_lite/interfaces/kits",
      "//base/security/permission_lite/services/pms/include",
      "//base/security/permission_lite/services/pms_base/include",
      "//commonlibrary/utils_lite/include",
      "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/registry",
      "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/samgr",
      "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/communication/broadcast",
      "//foundation/systemabilitymgr/samgr_lite/samgr/source",
      "//third_party/cJSON",
      "//third_party/bounds_checking_function/include",
    ]

    deps = [
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//build/lite/config/component/cJSON:cjson_shared",
      "//foundation/communication/ipc/interfaces/innerkits/c/ipc:ipc_single",
      "//foundation/systemabilitymgr/samgr_lite/samgr:samgr",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
} else {
  group("pms_client") {
  }
}
