# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("../../build/config.gni")

if (os_level != "mini") {
  lite_library("pms_client") {
    target_type = "shared_library"
    sources = [ "perm_client.c" ]

    include_dirs = [
      "../../interfaces/innerkits",
      "../../interfaces/kits",
      "../pms/include",
      "../pms_base/include",
    ]

    deps = [
      "${hilog_lite_path}/frameworks/featured:hilog_shared",
      "${ipc_path}/interfaces/innerkits/c/ipc:ipc_single",
      "${samgr_lite_path}/samgr:samgr",
      "//build/lite/config/component/cJSON:cjson_shared",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
} else {
  group("pms_client") {
  }
}
