# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission/permission.gni")
import("//build/ohos.gni")

config("distributed_permission_kits_config") {
  visibility = [ ":*" ]

  include_dirs = []

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "APP_LOG_TAG = \"DistributedPermission\"",
    "LOG_DOMAIN = 0xD001024",  # TODO
  ]
}

config("distributed_permission_kits_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${distributed_permission_frameworks_log_path}/main/cpp/include",
    "${distributed_permission_innerkits_distributed_path}/main/cpp/include",
    "${distributed_permission_kits_path}/main/cpp/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("distributed_permission_kits") {
  sources = [ "${distributed_permission_kits_path}/main/cpp/src/distributed_permission_manager.cpp" ]

  configs = [ ":distributed_permission_kits_config" ]

  public_configs = [ ":distributed_permission_kits_public_config" ]

  deps = [
    "${distributed_permission_frameworks_log_path}:permission_standard_infrastructure_cxx",
    "${distributed_permission_innerkits_distributed_path}:distributed_permission_innerkits",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  subsystem_name = "security"
  part_name = "permission_standard"
}
