# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission/permission.gni")
import("//build/ohos.gni")

config("distributed_permission_test_config") {
  include_dirs = [
    "${distributed_permission_sttest_path}/tool/include",
    "${permission_path}/test/resource/fuzztest/include",
    "${permission_path}/test/resource/stresstest",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include",
    "//foundation/distributedhardware/devicemanager/common/utils/include",

    "${aafwk_path}/interfaces/innerkits/want/include",
    "${aafwk_path}/interfaces/innerkits/base/include",
    "${aafwk_path}/interfaces/innerkits/want/include/ohos/aafwk/content",
    "${aafwk_path}/services/abilitymgr/include",
    "${aafwk_path}/services/common/include",
    "${aafwk_path}/tools/aa/include",
    "${appexecfwk_path}/common/log/include",
    "${appexecfwk_path}/interfaces/innerkits/libeventhandler/include",
    "${appexecfwk_path}/services/appmgr/include",
    "//foundation/distributedschedule/safwk/services/safwk/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//utils/native/base/include",
    "include",
    "//base/notification/ces_standard/frameworks/core/include",
    "//base/notification/ces_standard/interfaces/innerkits/native/include",
    "${appspawn_path}/include",
  ]

  configs = [ "${appexecfwk_path}/services/bundlemgr:bundlemgr_common_config" ]

  defines = [
    "APP_LOG_TAG = \"DistributedPermissionTest\"",
    "LOG_DOMAIN = 0xD001025",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  configs = []
}

group("systemtest") {
  testonly = true

  deps = [
    "check_distributed_permission_test:systemtest",
    "distributed_permission_duid_transform_test:systemtest",
    "distributed_permission_remind_test:systemtest",
    "distributed_permission_used_records_test:systemtest",
    "distributed_request_permission_from_remote_test:systemtest",
    "fuzz_test:systemtest",
    "notify_sync_permission_test:systemtest",
    "random_stress_test:systemtest",
    "stress_test:systemtest",
  ]
}
