# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission/permission.gni")
import("//build/test.gni")

module_output_path = "permission_standard/permissiontest"

ohos_moduletest("ModuleTestTest") {
  module_out_path = module_output_path
  include_dirs = []
  sources = [
    # "module_test.cpp" ,
  ]

  deps = []

  configs = [
    "${distributed_permission_standard_path}/test:services_module_test_config",
  ]

  external_deps = []
}

group("moduletest") {
  testonly = true

  deps = [ ":ModuleTestTest" ]
}
