# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission/permission.gni")
import("//build/ohos.gni")
subdemosystem_path = "${system_test_app_path}/checkSelfPermissionSystemTestA"
config("checkSelfPermissionSystemTestAConfig") {
  visibility = [ ":*" ]
  include_dirs = [
    "${subdemosystem_path}/include",
    "${appexecfwk_path}/kits/appkit/native/app",
    "${aafwk_path}/interfaces/innerkits/want/include/ohos/aafwk/content",
    "${aafwk_path}/interfaces/innerkits/ability_manager/include",
    "${appexecfwk_path}/interfaces/innerkits/libeventhandler/include",
    "${appexecfwk_path}/services/bundlemgr/include",
    "${aafwk_path}/services/abilitymgr/include",
    "${appexecfwk_path}/common/log/include",
    "//foundation/distributedschedule/services/dtbschedmgr/include",
  ]
  defines = [
    "APP_LOG_TAG = \"checkSelfPermissionSystemTestA\"",
    "LOG_DOMAIN = 0xD002200",
  ]
}
ohos_shared_library("checkSelfPermissionSystemTestA") {
  sources = [ "${subdemosystem_path}/src/check_self_permission_ability_a1.cpp" ]
  configs = [ ":checkSelfPermissionSystemTestAConfig" ]
  deps = [
    "${aafwk_path}/frameworks/kits/ability/native:abilitykit_native",
    "${aafwk_path}/interfaces/innerkits/want:want",
    "${aafwk_path}/services/abilitymgr:abilityms",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${appexecfwk_path}/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "${appexecfwk_path}/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "${appexecfwk_path}/kits:appkit_native",
    "${appexecfwk_path}/services/bundlemgr:libbms",
    "${distributed_permission_innerkits_distributed_path}:distributed_permission_innerkits",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//utils/native/base:utilsbase",
  ]
  external_deps = [
    "ces_standard:cesfwk_core",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "security"
  part_name = "permission_standard"
}
